turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:19: error: not found: value GAUCHE
    case GAUCHE() => gauche(); avance()
         ^Turmite:20: error: not found: value PDV
    case PDV => avance()
         ^Turmite:21: error: not found: value DT
    case DT => droite();droite()
         ^Turmite:22: error: not found: value DROITE
    case DROITE => droite()
         ^